Added Nikki's name

--- a/surprise.html
+++ b/surprise.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surprise Page 🎁</title>
+    <title>For Nikki 🎁</title>
     <link rel="stylesheet" href="surprise.css">
 </head>
 <body>
     <div class="container">
-        <h1>✨ Interactive Surprises ✨</h1>
+        <h1>✨ Hey Nikki! ✨</h1>
         
         <div class="gift-section">
             <div class="gift" id="gift">🎁</div>
