--- a/surprise.html
+++ b/surprise.html
@@ -30,7 +30,34 @@
             <p class="mood-message" id="moodMessage"></p>
             <p class="last-mood" id="lastMood"></p>
         </div>
+
+        <div class="letter-section">
+            <button class="letter-btn" id="letterBtn">💌 Open Love Letter</button>
+            <div class="letter-content" id="letterContent">
+                <h3>Dear Nikki,</h3>
+                <p>You are the sunshine in my life! Every moment with you is precious. Your smile brightens my darkest days, and your laughter is my favorite sound. Thank you for being you! 💖</p>
+                <p class="signature">- Someone who cares 💕</p>
+            </div>
+        </div>
+
+        <div class="memory-section">
+            <h2>💝 Special Memories</h2>
+            <button class="memory-btn" id="addMemory">+ Add Memory</button>
+            <div class="memories" id="memoriesList"></div>
+        </div>
+
+        <div class="quote-section">
+            <button class="quote-btn" id="quoteBtn">✨ Daily Inspiration</button>
+            <p class="quote" id="quote"></p>
+        </div>
+
+        <div class="countdown-section">
+            <h2>⏰ Days We've Been Friends</h2>
+            <p class="countdown" id="countdown">0 days</p>
+        </div>
     </div>
+
+    <div class="floating-hearts" id="floatingHearts"></div>
 
     <script src="surprise.js"></script>
 </body>
