Updated to fun facts

--- a/surprise.html
+++ b/surprise.html
@@ -32,11 +32,14 @@
         </div>
 
         <div class="letter-section">
-            <button class="letter-btn" id="letterBtn">💌 Open Love Letter</button>
+            <button class="letter-btn" id="letterBtn">🌟 Fun Facts About Nikki</button>
             <div class="letter-content" id="letterContent">
-                <h3>Dear Nikki,</h3>
-                <p>You are the sunshine in my life! Every moment with you is precious. Your smile brightens my darkest days, and your laughter is my favorite sound. Thank you for being you! 💖</p>
-                <p class="signature">- Someone who cares 💕</p>
+                <h3>✨ Why Nikki is Awesome ✨</h3>
+                <p>🌸 Has the most contagious smile that lights up any room</p>
+                <p>💫 Makes everyone around feel valued and heard</p>
+                <p>🎨 Brings creativity and joy to everything</p>
+                <p>🌈 Turns ordinary moments into special memories</p>
+                <p>⭐ Simply irreplaceable and one-of-a-kind!</p>
             </div>
         </div>
 
