Added photo gallery with images

--- a/surprise.html
+++ b/surprise.html
@@ -43,6 +43,13 @@
             </div>
         </div>
 
+        <div class="gallery-section">
+            <h2>📸 Photo Gallery</h2>
+            <div class="gallery" id="gallery"></div>
+            <button class="upload-btn" id="uploadBtn">📷 Add Photo</button>
+            <input type="file" id="fileInput" accept="image/*" style="display: none;">
+        </div>
+
         <div class="memory-section">
             <h2>💝 Special Memories</h2>
             <button class="memory-btn" id="addMemory">+ Add Memory</button>
